--- a/res/xml/crdroid_settings_about.xml
+++ b/res/xml/crdroid_settings_about.xml
@@ -37,18 +37,22 @@
         android:summary="@string/crdroid_website_summary" />
 
     <!-- crDroid Translate -->
-    <Preference
+<!--
+    <PreferenceScreen
         android:key="crdroid_translate"
         android:icon="@drawable/ic_translate"
         android:title="@string/crdroid_translate_title"
-        android:summary="@string/crdroid_translate_summary" />
+        android:summary="@string/crdroid_translate_summary"
+        settings:allowDividerAbove="false" />
+-->
 
-    <!-- crDroid Share -->
-    <Preference
+    <!-- Floko Share -->
+    <PreferenceScreen
         android:key="crdroid_share"
         android:icon="@drawable/ic_share"
-        android:title="@string/share_crdroid_title"
-        android:summary="@string/share_crdroid_summary" />
+        android:title="@string/share_floko_title"
+        android:summary="@string/share_floko_summary"
+        settings:allowDividerAbove="false" />
 
     <!-- crDroid Donate -->
     <Preference
@@ -65,27 +69,35 @@
         android:summary="@string/crdroid_source_summary" />
 
     <!-- crDroid Telegram -->
-    <Preference
+<!--
+    <PreferenceScreen
         android:key="crdroid_telegram"
         android:icon="@drawable/ic_telegram"
         android:title="@string/crdroid_telegram_title"
-        android:summary="@string/crdroid_telegram_summary" />
+        android:summary="@string/crdroid_telegram_summary"
+        settings:allowDividerAbove="false" />
+-->
 
     <!-- crDroid Telegram Updates Channel -->
+<!--
     <Preference
         android:key="crdroid_telegram_channel"
         android:icon="@drawable/ic_telegram_channel"
         android:title="@string/crdroid_telegram_channel_title"
         android:summary="@string/crdroid_telegram_channel_summary" />
+-->
 
     <!-- crDroid sponsor -->
+<!--
     <Preference
         android:key="crdroid_sponsor"
         android:icon="@drawable/ic_sponsor"
         android:title="@string/crdroid_sponsor_title"
         android:summary="@string/crdroid_sponsor_summary" />
+-->
 
     <!-- crDroid OTA update -->
+<!--
     <Preference
         android:key="system_update_settings"
         android:title="@string/crdroid_update_title"
@@ -94,6 +106,7 @@
         settings:controller="com.android.settings.system.SystemUpdatePreferenceController">
         <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
     </Preference>
+-->
 
     <!-- crDroid Drill -->
     <Preference
