Revert "floko: Disable Font Picker"
This reverts commit 77cf4be6f76ed3c4acb662cee1ce3d3a914d4c92.

--- a/res/xml/crdroid_settings_ui.xml
+++ b/res/xml/crdroid_settings_ui.xml
@@ -48,12 +48,12 @@
         android:key="expanded_desktop_settings"
         android:icon="@drawable/ic_expanded" />
 
-    <!-- Font
+    <!-- Font -->
     <com.crdroid.settings.fragments.ui.FontDialogPreference
         android:key="custom_font"
         android:icon="@drawable/ic_font"
         android:title="@string/font_picker_title"
-        android:persistent="false" /> -->
+        android:persistent="false" />
 
     <!-- Full screen aspect ratio
     <org.lineageos.internal.lineageparts.LineagePartsPreference
