--- a/res/drawable/ic_volte.xml
+++ b/res/drawable/ic_volte.xml
@@ -15,52 +15,27 @@
      limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="28.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="28.0"
-        android:viewportHeight="24.0"
-        android:tint="?android:attr/colorControlNormal">
-    <group
-        android:scaleX="4.381413"
-        android:scaleY="5.44208"
-        android:translateX="-1.501231"
-        android:translateY="-1648.221">
-        <group
-            android:scaleX="0.1288949"
-            android:scaleY="0.1034333"
-            android:translateX="-107.6397"
-            android:translateY="246.5987">
-            <group
-                android:translateX="31.33237"
-                android:translateY="1.666935">
-                <group
-                    android:scaleX="1.770721"
-                    android:scaleY="1.776538"
-                    android:translateX="805.3544"
-                    android:translateY="543.1622">
-                    <path
-                        android:fillColor="#FF000000"
-                        android:pathData="M16.847656 5.5507812c-1.239433 0 -2.24414 1.0008975 -2.24414 2.2363282l0 7.4863286c0 1.23538 -1.004708 2.238281 -2.244141 2.238281l14.671875 0c0.631421 0 1.142578 -0.509319 1.142578 -1.138672l0 -9.6835939c0 -0.6293531 -0.511214 -1.1386212 -1.142578 -1.1386719zM15.289062 7.875l0.765626 0 0 6.355469 2.876953 0 0 0.851562 -3.642579 0zm2.986329 0l4.878906 0 0 0.8515625 -2.056641 0 0 6.3554685 -0.765625 0 0 -6.3554685 -2.05664 0zm5.660156 0l3.794922 0 0 0.8515625 -3.029297 0 0 1.9746095 3.029297 0 0 0.853516 -3.029297 0 0 2.675781 3.029297 0 0 0.851562 -3.794922 0z" />
-                </group>
-                <path
-                    android:fillColor="#FF000000"
-                    android:pathData="M853.22008 552.26396l-4.6462 0 0 1.51771 4.6462 0c0.69741 0 1.26478 0.56736 1.26478 1.26478l0 17.20129c0 0.69741 -0.56737 1.26477 -1.26478 1.26477l-22.51275 0c0.78379 -0.84499 1.2642 -1.97507 1.2642 -3.21563l0 -13.29957c0 -1.77307 1.44256 -3.21564 3.21563 -3.21564l4.98861 0 0 -1.51771 -30.97061 0c-1.53427 0 -2.78258 1.24831 -2.78258 2.78259l0 17.20128c0 1.53428 1.24831 2.78259 2.78258 2.78259l5.27796 0 0 -1.51771 -5.27796 0c-0.69741 0 -1.26477 -0.56736 -1.26477 -1.26478l0 -17.20138c0 -0.69742 0.56736 -1.26478 1.26477 -1.26478l22.51285 0c-0.78379 0.84499 -1.2642 1.97507 -1.2642 3.21564l0 13.29956c0 1.77307 -1.44256 3.21564 -3.21563 3.21564l-7.64521 0 0 1.51771 33.62721 0c1.53427 0 2.78258 -1.24831 2.78258 -2.78258l0 -17.20119c-0.00009 -1.53428 -1.24841 -2.78259 -2.78268 -2.78259z" />
-                <path
-                    android:fillColor="#FF000000"
-                    android:pathData="M840.09998 552.26398l5.41608 0 0 1.51771 -5.41608 0z" />
-                <path
-                    android:fillColor="#FF000000"
-                    android:pathData="M845.28522 552.26398l3.32203 0 0 1.51771 -3.32203 0z" />
-                <path
-                    android:fillColor="#FF000000"
-                    android:pathData="M813.98767 573.51263l6.04949 0 0 1.51772 -6.04949 0z" />
-                <path
-                    android:fillColor="#FFFFFFFF"
-                    android:pathData="M819.84644 557.71913l-4.40801 12.10985 -2.14708 0 -4.40802 -12.10985 1.72417 0 3.79805 10.65407 3.79805 -10.65407 1.64284 0z" />
-                <path
-                    android:fillColor="#FF000000"
-                    android:pathData="M828.49169 565.29084q0 2.22027 -1.13861 3.50526 -1.1386 1.285 -3.04982 1.285 -1.92749 0 -3.0661 -1.285 -1.13047 -1.28499 -1.13047 -3.50526 0 -2.22028 1.13047 -3.50527 1.13861 -1.29313 3.0661 -1.29313 1.91122 0 3.04982 1.29313 1.13861 1.28499 1.13861 3.50527zm-1.57778 0q0 -1.76484 -0.6913 -2.61879 -0.69129 -0.86208 -1.91935 -0.86208 -1.24433 0 -1.93563 0.86208 -0.68316 0.85395 -0.68316 2.61879 0 1.7079 0.6913 2.59438 0.69129 0.87835 1.92749 0.87835 1.21993 0 1.91122 -0.87021 0.69943 -0.87835 0.69943 -2.60252z" />
-            </group>
-        </group>
-    </group>
+    android:width="23.57dp"
+    android:height="24dp"
+    android:viewportWidth="16.4"
+    android:viewportHeight="16.7"
+    android:tint="?android:attr/colorControlNormal">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M5.3,7.4l2.5,-5.7H6.4L4.9,5.1L4.6,5.9H4.6L4.3,5.1L2.9,1.7H1.5l2.4,5.7H5.3z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M12.9,8.7h-0.3H4.2c-0.2,0 -0.5,0 -0.7,0C1.6,9 0.1,10.6 0,12.5v0.4c0.1,2.1 1.8,3.7 3.8,3.8h8.6c2.1,0 3.9,-1.7 4,-3.8v-0.4C16.3,10.5 14.8,8.9 12.9,8.7zM6.2,14.9H3.6v-4.4h0.8v3.6h1.8L6.2,14.9zM9.4,11.3H8.2v3.6H7.3v-3.6H6.2v-0.8h3.3L9.4,11.3zM12.8,11.3h-1.9v1h1.8v0.8h-1.8v1h1.9v0.8h-2.8v-4.4h2.8V11.3z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M14.9,4.5h1c0,-2.4 -2,-4.4 -4.4,-4.5v1.1C13.3,1.1 14.8,2.6 14.9,4.5z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M11.4,7.4c1.2,0 2.3,-0.7 2.7,-1.9c0,-0.1 0.1,-0.2 0.1,-0.2c0,0 0,0 0,-0.1H13c-0.3,0.6 -0.9,1.1 -1.6,1.1c-1,0 -1.8,-0.8 -1.8,-1.8c0,-0.7 0.4,-1.3 1.1,-1.6V1.8c-0.5,0.1 -1,0.4 -1.4,0.8c-0.5,0.5 -0.8,1.3 -0.8,2C8.5,6.2 9.8,7.4 11.4,7.4z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M11.4,3.8c0.4,0 0.7,0.3 0.7,0.7c0,0.4 -0.3,0.7 -0.7,0.7S10.7,5 10.7,4.5C10.7,4.1 11,3.8 11.4,3.8z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M13.2,4.5h1.1c0,-1.5 -1.3,-2.8 -2.8,-2.8l0,0v1.1C12.4,2.8 13.2,3.6 13.2,4.5z"/>
 </vector>
