--- a/res/values-sv-rSE/cr_strings.xml
+++ b/res/values-sv-rSE/cr_strings.xml
@@ -1554,7 +1554,7 @@
     <string name="media_scanner_on_boot_disabled">Do not scan media</string>
     <!-- Reset settings -->
     <string name="reset_settings_title">Reset settings</string>
-    <string name="reset_settings_message">This will reset most crdroid settings to their default values for the current user. Would you like to continue?</string>
+    <string name="reset_settings_message">This will reset most FlokoROM settings to their default values for the current user. Would you like to continue?</string>
     <!-- OTA -->
     <string name="ota_crdroid_title">Updates</string>
     <string name="ota_crdroid_summary">Kontrollera för OTA uppdatering och länkar för din enhet</string>
