--- a/res/values-cs-rCZ/cr_strings.xml
+++ b/res/values-cs-rCZ/cr_strings.xml
@@ -1554,7 +1554,7 @@
     <string name="media_scanner_on_boot_disabled">Neskenovat média</string>
     <!-- Reset settings -->
     <string name="reset_settings_title">Obnovit nastavení</string>
-    <string name="reset_settings_message">Tímto obnovíte většinu nastavení crDroidu pro aktuálního uživatele na výchozí hodnoty. Přejete si pokračovat?</string>
+    <string name="reset_settings_message">Tímto obnovíte většinu nastavení FlokoROM pro aktuálního uživatele na výchozí hodnoty. Přejete si pokračovat?</string>
     <!-- OTA -->
     <string name="ota_crdroid_title">Aktualizace</string>
     <string name="ota_crdroid_summary">Zkontrolovat aktualizaci OTA a odkazy pro zařízení</string>
