--- a/res/values-fr-rFR/cr_strings.xml
+++ b/res/values-fr-rFR/cr_strings.xml
@@ -1555,7 +1555,7 @@ https://plus.google.com/communities/118297646046960923906</string>
     <string name="media_scanner_on_boot_disabled">Ne pas analyser les médias</string>
     <!-- Reset settings -->
     <string name="reset_settings_title">Réinitialiser les paramètres</string>
-    <string name="reset_settings_message">Cela réinitialisera la plupart des paramètres crdroid à leurs valeurs par défaut pour l’utilisateur actuel. Souhaitez-vous continuer ?</string>
+    <string name="reset_settings_message">Cela réinitialisera la plupart des paramètres FlokoROM à leurs valeurs par défaut pour l’utilisateur actuel. Souhaitez-vous continuer ?</string>
     <!-- OTA -->
     <string name="ota_crdroid_title">Mises à jour</string>
     <string name="ota_crdroid_summary">Vérifier la mise à jour OTA et liens pour votre appareil</string>
