--- a/res/values-ta-rIN/cr_strings.xml
+++ b/res/values-ta-rIN/cr_strings.xml
@@ -1561,7 +1561,7 @@ fling_left_up_swipe
     <string name="media_scanner_on_boot_disabled">Do not scan media</string>
     <!-- Reset settings -->
     <string name="reset_settings_title">Reset settings</string>
-    <string name="reset_settings_message">This will reset most crdroid settings to their default values for the current user. Would you like to continue?</string>
+    <string name="reset_settings_message">This will reset most FlokoROM settings to their default values for the current user. Would you like to continue?</string>
     <!-- OTA -->
     <string name="ota_crdroid_title">Updates</string>
     <string name="ota_crdroid_summary">Check for OTA update and links for your device</string>
