--- a/res/values/cr_arrays.xml
+++ b/res/values/cr_arrays.xml
@@ -1862,11 +1862,13 @@
     <string-array name="recents_style_entries">
         <item>@string/recents_style_quickstep</item>
         <item>@string/recents_style_aosp</item>
+        <item>@string/recents_style_omni</item>
     </string-array>
     
     <string-array name="recents_style_values" translatable="false">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
     </string-array>
 
     <!-- Blink flashlight for incoming calls -->
