[2/2] crdroid: Add back OmniSwitch Recent
* Modified for Q
  -Remove AOSP LegacyRecent
  -Androidx migration

Change-Id: I3c03612024ec2549810964c746cc80a78812892b
Signed-off-by: koron393 <koron393@gmail.com>

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -2116,6 +2116,7 @@
     <string name="recents_style_title">Recents style</string>
     <string name="recents_style_quickstep">QuickStep</string>
     <string name="recents_style_aosp">AOSP</string>
+    <string name="recents_style_omni">OmniSwitch</string>
     <string name="device_restart_required">Restart your device to apply changes</string>
 
     <!-- Custom seekbar -->
