Fixed VoLTE icon

--- a/res/drawable/ic_volte.xml
+++ b/res/drawable/ic_volte.xml
@@ -15,27 +15,27 @@
      limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="32.67dp"
-    android:height="28dp"
-    android:viewportWidth="28"
-    android:viewportHeight="24"
+    android:width="23.57dp"
+    android:height="24dp"
+    android:viewportWidth="16.4"
+    android:viewportHeight="16.7"
     android:tint="?android:attr/colorControlNormal">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M 11.1 11.06 L 13.58 5.32 L 12.19 5.32 L 10.73 8.78 L 10.45 9.52 L 10.38 9.52 L 10.13 8.78 L 8.73 5.32 L 7.33 5.32 L 9.74 11.06 L 11.1 11.06 Z" />
+        android:pathData="M5.3,7.4l2.5,-5.7H6.4L4.9,5.1L4.6,5.9H4.6L4.3,5.1L2.9,1.7H1.5l2.4,5.7H5.3z"/>
     <path
         android:fillColor="#FF000000"
-        android:pathData="M18.68,12.35l-0.3,0H10a5.46,5.46,0,0,0-0.7,0,4,4,0,0,0-3.5,3.8v0.39a4,4,0,0,0,3.83,3.81H18.2a4,4,0,0,0,4-3.83v-0.39A4,4,0,0,0,18.68,12.35Zm-6.63,6.16H9.42V14.14h0.82v3.57h1.84Zm3.16-3.57H14v3.57h-0.87V14.94H12v-0.77h3.26Zm3.4,0H16.68v1h1.75v0.78H16.68v1h1.93v0.78H15.85V14.14h2.76Z"/>
+        android:pathData="M12.9,8.7h-0.3H4.2c-0.2,0 -0.5,0 -0.7,0C1.6,9 0.1,10.6 0,12.5v0.4c0.1,2.1 1.8,3.7 3.8,3.8h8.6c2.1,0 3.9,-1.7 4,-3.8v-0.4C16.3,10.5 14.8,8.9 12.9,8.7zM6.2,14.9H3.6v-4.4h0.8v3.6h1.8L6.2,14.9zM9.4,11.3H8.2v3.6H7.3v-3.6H6.2v-0.8h3.3L9.4,11.3zM12.8,11.3h-1.9v1h1.8v0.8h-1.8v1h1.9v0.8h-2.8v-4.4h2.8V11.3z"/>
     <path
         android:fillColor="#FF000000"
-        android:pathData="M20.69,8.11h1a4.55,4.55,0,0,0-4.43-4.47V4.7A3.49,3.49,0,0,1,20.69,8.11Z" />
+        android:pathData="M14.9,4.5h1c0,-2.4 -2,-4.4 -4.4,-4.5v1.1C13.3,1.1 14.8,2.6 14.9,4.5z"/>
     <path
         android:fillColor="#FF000000"
-        android:pathData="M17.2,11.08a2.9,2.9,0,0,0,2.69-1.85A2.5,2.5,0,0,0,20,9s0,0,0-0.05H18.82A1.77,1.77,0,0,1,17.2,10a1.79,1.79,0,0,1-0.71-3.43V5.41a2.81,2.81,0,0,0-1.41 0.82 ,2.85,2.85,0,0,0-0.78,2A2.9,2.9,0,0,0,17.2,11.08Z" />
+        android:pathData="M11.4,7.4c1.2,0 2.3,-0.7 2.7,-1.9c0,-0.1 0.1,-0.2 0.1,-0.2c0,0 0,0 0,-0.1H13c-0.3,0.6 -0.9,1.1 -1.6,1.1c-1,0 -1.8,-0.8 -1.8,-1.8c0,-0.7 0.4,-1.3 1.1,-1.6V1.8c-0.5,0.1 -1,0.4 -1.4,0.8c-0.5,0.5 -0.8,1.3 -0.8,2C8.5,6.2 9.8,7.4 11.4,7.4z"/>
     <path
         android:fillColor="#FF000000"
-        android:pathData="M 17.23 7.46 C 17.6331678674 7.46 17.96 7.78683213262 17.96 8.19 C 17.96 8.59316786738 17.6331678674 8.92 17.23 8.92 C 16.8268321326 8.92 16.5 8.59316786738 16.5 8.19 C 16.5 7.78683213262 16.8268321326 7.46 17.23 7.46 Z" />
+        android:pathData="M11.4,3.8c0.4,0 0.7,0.3 0.7,0.7c0,0.4 -0.3,0.7 -0.7,0.7S10.7,5 10.7,4.5C10.7,4.1 11,3.8 11.4,3.8z"/>
     <path
         android:fillColor="#FF000000"
-        android:pathData="M19,8.11h1.1a2.86,2.86,0,0,0-2.78-2.8h0v1.1A1.77,1.77,0,0,1,19,8.11Z" />
+        android:pathData="M13.2,4.5h1.1c0,-1.5 -1.3,-2.8 -2.8,-2.8l0,0v1.1C12.4,2.8 13.2,3.6 13.2,4.5z"/>
 </vector>
