--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -123,6 +123,8 @@
     <string name="omniswitch_start_settings_summary">View the settings for OmniSwitch</string>
     <string name="omniswitch_first_time_title">OmniSwitch Recents</string>
     <string name="omniswitch_first_time_message">Make sure you have also enabled OmniSwitch by opening OmniSwitch settings.</string>
+    <string name="recents_information">About recents style</string>
+    <string name="recents_information_summary">Customize the recents style when 3-button navigation</string>
 
     <!-- Lockscreen categories -->
     <string name="lockscreen_shortcuts_category">Shortcuts</string>
@@ -2128,6 +2130,7 @@
     <string name="recents_style_title">Recents style</string>
     <string name="recents_style_quickstep">QuickStep</string>
     <string name="recents_style_aosp">AOSP</string>
+    <string name="recents_style_omni">OmniSwitch</string>
     <string name="device_restart_required">Restart your device to apply changes</string>
 
     <!-- Custom seekbar -->
