--- a/res/xml/crdroid_settings_ui.xml
+++ b/res/xml/crdroid_settings_ui.xml
@@ -101,14 +101,14 @@
         android:summary="@string/style_summary"
         android:fragment="com.crdroid.settings.fragments.ui.ThemeSettings" />
 
-    <!--<Preference
-        android:key="trans_porn"
+    <Preference
+        android:key="trans_fragment"
         android:icon="@drawable/ic_transparency"
         android:title="@string/trans"
         android:summary="@string/trans_summary"
-        android:fragment="com.crdroid.settings.fragments.TransparencyPornFragment" />
+        android:fragment="com.crdroid.settings.fragments.ui.TransparencyFragment" />
 
-    <com.crdroid.settings.preferences.SystemSettingSwitchPreference
+    <!--<com.crdroid.settings.preferences.SystemSettingSwitchPreference
         android:key="show_alarm_fullscreen"
         android:icon="@drawable/ic_alarm_check"
         android:title="@string/show_alarm_fullscreen_title"
