--- a/res/xml/crdroid_settings_about.xml
+++ b/res/xml/crdroid_settings_about.xml
@@ -93,7 +93,7 @@
         android:summary="@string/crdroid_sponsor_summary" />
 -->
 
-    <!-- crDroid OTA update -->
+    <!-- crDroid OTA update
     <Preference
         android:key="system_update_settings"
         android:title="@string/crdroid_update_title"
@@ -101,7 +101,7 @@
         android:icon="@drawable/ic_update"
         settings:controller="com.android.settings.system.SystemUpdatePreferenceController">
         <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
-    </Preference>
+    </Preference>-->
 
     <!-- crDroid Drill -->
     <Preference
