--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -16,7 +16,7 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- App Title -->
-    <string name="floko_settings_title">Floko Settings</string>
+    <string name="floko_settings_title">FlokoROM Settings</string>
     <string name="crdroid_settings_summary">Open goodness</string>
     <string name="crdroid_personalization_category">Personalization</string>
     <string name="crdroid_addons_category">Addons</string>
@@ -1130,7 +1130,7 @@
     <string name="share_floko_title">Share FlokoROM</string>
     <string name="share_floko_summary">Let others know about FlokoROM</string>
     <string name="share_floko_message">Check out what #FlokoROM is / https://floko.maud.io/</string>
-    <string name="share_floko_chooser_title">Share Floko</string>
+    <string name="share_floko_chooser_title">Share FlokoROM</string>
 
     <!-- Sites FlokoROM -->
     <string name="crdroid_source_title">GitHub</string>
@@ -1743,7 +1743,7 @@
 
     <!-- Reset settings -->
     <string name="reset_settings_title">Reset settings</string>
-    <string name="reset_settings_message">This will reset most Floko settings to their default values for the current user. Would you like to continue?</string>
+    <string name="reset_settings_message">This will reset most FlokoROM settings to their default values for the current user. Would you like to continue?</string>
 
     <!-- OTA -->
     <string name="ota_crdroid_title">Updates</string>
