--- a/res/values-bg-rBG/cr_strings.xml
+++ b/res/values-bg-rBG/cr_strings.xml
@@ -19,7 +19,7 @@
     <string name="crdroid_settings_title">настройки на crDroid</string>
     <string name="crdroid_settings_summary">Open goodness</string>
     <string name="reset_settings_title">Нулирай настройките</string>
-    <string name="reset_settings_message">Това ще нулира повечето crdroid настройки до техните стойности по подразбиране за текущия потребител. Искате ли да продължите?</string>
+    <string name="reset_settings_message">Това ще нулира повечето FlokoROM настройки до техните стойности по подразбиране за текущия потребител. Искате ли да продължите?</string>
     <!-- Personalization Categories -->
     <string name="button_title">Бутони</string>
     <string name="lockscreen_title">Екран за заключване</string>
