--- a/res/values-pt-rBR/cr_strings.xml
+++ b/res/values-pt-rBR/cr_strings.xml
@@ -19,7 +19,7 @@
     <string name="crdroid_settings_title">Configurações crDroid</string>
     <string name="crdroid_settings_summary">Descubra a bondade</string>
     <string name="reset_settings_title">Redefinir configurações</string>
-    <string name="reset_settings_message">Isso vai redefinir as alterações feitas nas configurações crDroid. Gostaria de continuar?</string>
+    <string name="reset_settings_message">Isso vai redefinir as alterações feitas nas configurações FlokoROM. Gostaria de continuar?</string>
     <!-- Personalization Categories -->
     <string name="button_title">Botões</string>
     <string name="lockscreen_title">Tela de Bloqueio</string>
