--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -17,10 +17,10 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- App Title -->
-    <string name="crdroid_settings_title">crDroid Settings</string>
+    <string name="floko_settings_title">FlokoROM Settings</string>
     <string name="crdroid_settings_summary">Open goodness</string>
     <string name="reset_settings_title">Reset settings</string>
-    <string name="reset_settings_message">This will reset most crdroid settings to their default values for the current user. Would you like to continue?</string>
+    <string name="reset_settings_message">This will reset most FlokoROM settings to their default values for the current user. Would you like to continue?</string>
 
     <!-- Personalization Categories -->
     <string name="button_title">Buttons</string>
@@ -62,15 +62,15 @@
     <string name="changelog_crdroid_summary">View changes in the ROM installed</string>
     <string name="changelog_crdroid_error">Unable to load changelog</string>
 
-    <!-- About crDroid -->
-    <string name="about_crdroid">About crDroid</string>
+    <!-- About FlokoROM -->
+    <string name="about_floko">About FlokoROM</string>
     <string name="about_device_name">Device</string>
 
-    <!-- Share crDroid -->
-    <string name="share_crdroid_title">Share crDroid</string>
-    <string name="share_crdroid_summary">Let others know about crDroid</string>
-    <string name="share_message">Check out if #crDroidAndroid is available for your device @ https://crdroid.net/</string>
-    <string name="share_chooser_title">Share crDroid</string>
+    <!-- Share FlokoROM -->
+    <string name="share_floko_title">Share FlokoROM</string>
+    <string name="share_floko_summary">Let others know about FlokoROM</string>
+    <string name="share_floko_message">Check out what #FlokoROM is / https://floko.maud.io</string>
+    <string name="share_floko_chooser_title">Share FlokoROM</string>
 
     <!-- Sites crDroid -->
     <string name="crdroid_source_title">GitHub</string>
@@ -83,14 +83,12 @@
     <string name="crdroid_website_summary">Visit our official website</string>
     <string name="crdroid_translate_title">Translations</string>
     <string name="crdroid_translate_summary">Help with localisation of ROM in your language!</string>
-    <string name="crdroid_sponsor_title" translatable="false">ScopeHosts</string>
-    <string name="crdroid_sponsor_summary">Visit our website host partner</string>
 
     <!-- Donate crDroid -->
     <string name="donate_crdroid_title">Support us</string>
     <string name="donate_crdroid_summary">Donate to support further development</string>
-    <string name="donate_team_title">crDroid team</string>
-    <string name="donate_team_summary">Donate to support server hosting, site uptime and overall management</string>
+    <string name="donate_github_title" translatable="false">GitHub Sponsors</string>
+    <string name="donate_github_summary">Donate to support further development at one-time or monthly</string>
 
     <!-- The Drill -->
     <string name="drill_title">The drill</string>
@@ -585,7 +583,7 @@
     <string name="qs_footer_settings_icon_title">Settings shortcut</string>
 
     <!-- Device Info screen. crDroid legal. -->
-    <string name="crdroid_license_title">crDroid legal</string>
+    <string name="floko_license_title">FlokoROM legal</string>
 
     <!-- Quick Settings brightness slider -->
     <string name="qs_show_brightness_slider_title">Brightness slider</string>
